# miscellaneous

./: .gitignore  LICENSE
.github/workflows/: ccpp.yml
c++/utils/: CMakeLists.txt  strutils.hpp
c++/utils/src/: strutils.cpp
c++/utils/src/test/: strutils_test.cpp
